# sealci

./: .gitignore  README.md
agent/: Cargo.toml  README.md
agent/scheduler_mock/: main.rs
agent/src/: app.rs  lib.rs  main.rs  server.rs
agent/src/brokers/: mod.rs
agent/src/brokers/action_broker/: mod.rs
agent/src/brokers/state_broker/: mod.rs
agent/src/config/: mod.rs
agent/src/models/: error.rs  mod.rs  output_pipe.rs  step.rs
agent/src/models/action/: mod.rs  state.rs
agent/src/models/container/: exec_handle.rs  mock.rs  mod.rs
agent/src/services/: health_service.rs  mod.rs  scheduler_service.rs
agent/src/services/action_service/: mod.rs
agent/tests/: models.rs
compactor/: Cargo.toml  README.md
compactor/src/: app.rs  cli.rs  config.rs  error.rs  kernel.rs  lib.rs  main.rs
controller/: Cargo.toml  README.md  build.rs
dumper/: Cargo.toml  README.md
dumper/examples/: launch.rs
dumper/examples/quickstart/: Cargo.toml
dumper/examples/quickstart/src/: main.rs
dumper/macro_vmm/: Cargo.toml
dumper/macro_vmm/src/: lib.rs
dumper/scripts/: alpine_config  config  fs.sh  kernel.sh  new_config
dumper/src/: lib.rs
dumper/src/common/: error.rs
dumper/src/config/: cli.rs  mod.rs  vmm.rs
dumper/src/cpu/: mod.rs
dumper/src/devices/: epoll.rs  mod.rs
dumper/src/devices/serial/: mod.rs
dumper/src/devices/virtio/: mod.rs
dumper/src/devices/virtio/net/: bridge.rs  device.rs  mod.rs  queue_handler.rs  simple_handler.rs
dumper/src/kernel/: mod.rs
dumper/src/vmm/: irq_allocator.rs  mod.rs
monitor/: Cargo.toml  README.md  arch.md
monitor/src/: common.rs  config.rs  constants.rs  controller.rs  error.rs  event_listener.rs  external_api.rs  file_utils.rs  lib.rs  main.rs
monitor/src/app/: mod.rs
monitor/src/github/: http.rs  mod.rs  models.rs
monitor/src/service/: listener.rs
release-agent/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  prod-compose.yml  sealci.key
release-agent/minio/data/.minio.sys/: format.json
release-agent/minio/data/.minio.sys/tmp/.trash/0d0edf4f-2666-4501-ac6c-db4ae267fa8a/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/214fe427-3f33-412e-ba82-ea12d2854d07/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/25baf8da-08d8-4ade-859c-c42052da8ab3/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/2bde1262-7af2-4e51-8927-5b2e5229df03/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/2c9e4f94-de93-4819-a1d2-beb1de993047/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/2f9ad07e-7103-475c-bdca-5fd138abbf60/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/373625d4-b53d-4102-999d-4ed1bc06e47e/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/466692a3-7a37-45bc-9563-7751db875732/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/4b1f84ea-7a63-4a3b-957a-78890505799b/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/4f1c2a88-1047-4ad7-bccf-8120c0736bbd/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/5507f121-8639-49ce-bfa0-5c137deaef78/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/5983febb-708e-48b4-a1c0-45784df9a382/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/6e0bca2a-ebf4-4d35-975c-b0e6b7a09ab0/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/70f71208-70a9-4ea4-ab46-e80e83b59af0/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/7717e9a4-656a-4575-8fb0-b814f4090dee/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/78873e5a-b825-4068-a7c3-8814b9dd8fb6/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/7bf0b84b-62a2-40c6-a322-d21b5ab9056b/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/7fe88b24-45bd-4910-96ad-d1d25ed99d5e/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/8151835b-257f-4317-805a-c21a8a1cea75/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/8a86b3b1-7352-4032-a98e-a798a60e69e3/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/8d060a0f-4665-46af-babf-895b59b27662/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/8ebfee6c-2dc7-462f-af45-6922e9a3dd82/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/97995a70-eea0-4259-987b-22b2ccd3d0a4/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/a4ba4dab-a28a-420b-988a-a226c36cfbe6/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/a7d27630-4954-4ede-a6d4-f8cff4129f48/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/a8b09697-53cd-4d52-b799-0bf5864364ff/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/acb373f5-8267-4111-8ef8-beef87e71592/: xl.meta.bkp
release-agent/minio/data/.minio.sys/tmp/.trash/b491fb26-622e-4bbf-8a53-f44ca0d62b88/: xl.meta.bkp
release-agent/proto/: controller.proto
release-agent/src/: app.rs  config.rs  grpc.rs  main.rs
release-agent/src/lib/: app.rs  compress.rs  core.rs  file.rs  git.rs  grpc.rs  lib.rs  sign.rs
release-agent/src/lib/bucket/: minio.rs  mod.rs
scheduler/: Cargo.toml  README.md  build.rs
scheduler/src/: app.rs  config.rs  errors.rs  lib.rs  main.rs
scheduler/src/interfaces/client/: agent_client.rs
scheduler/src/interfaces/server/: agent_interface.rs  controller_interface.rs
scheduler/src/lib/: app.rs  lib.rs
scheduler/src/lib/interfaces/client/: agent_client.rs
scheduler/src/lib/interfaces/server/: agent_interface.rs  controller_interface.rs
scheduler/src/lib/logic/: agent_pool_logic.rs
scheduler/src/logic/: action_queue_logic.rs
scheduler/tests/: client_register_agent.rs  client_report_health_status.rs  client_schedule_action.rs
sealcid/: Cargo.toml  build.rs  sealcid.proto
sealcid/sealcid_traits/: Cargo.toml  build.rs
sealcid/sealcid_traits/src/: lib.rs  status.rs
sealcid/src/lib/client/: commands.rs  config.rs  error.rs  mod.rs
sealcid/src/lib/common/: error.rs  mod.rs  mutation.rs  proto.rs  service_enum.rs  status.rs
sealcid/src/lib/server/: app.rs  cli.rs  config.rs  daemon.rs  grpc.rs  mod.rs  service.rs
(+158 files in other folders)
