[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"
prost = "0.13.1"
tokio-stream = { version = "0.1.17", features = ["sync"] }
sysinfo = "0.30.13"
futures-util = "0.3.30"
bollard = "0.17.1"
clap = { version = "4.5.16", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.9.0"
sealcid_traits = { path = "../sealcid/sealcid_traits" }


[build-dependencies]
tonic-build = "0.12.0"

[[bin]]
name = "scheduler_mock"
path = "scheduler_mock/main.rs"

[[bin]]
name = "sealci-agent"
path = "src/main.rs"
