[package]
name = "compactor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dumper = { path = "../dumper" }
dumplet = { path = "../dumplet" }
env = "1.0.1"
tokio = { version = "1.45.1", features = ["full"] }
sealcid_traits = { path = "../sealcid/sealcid_traits" }
tonic = "0.13.1"
tracing = "0.1.40"
