[workspace]
members = ["macro_vmm"]

[package]
name = "dumper"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
epoll = "4.3.3"
kvm-bindings = "0.11.1"
kvm-ioctls = "0.21.0"
libc = "0.2.171"
linux-loader = { version = "0.13.0", features = ["bzimage", "elf"] }
proc-macro2 = { version = "1.0.95", features = ["proc-macro"] }
vm-memory = { version = "0.16.1", features = ["backend-mmap"] }
vm-superio = "0.8.0"
vm-allocator = "0.1.0"
vmm-sys-util = "0.12.1"
event-manager = { version = "0.4.0", features = ["remote_endpoint"] }
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio.git" }
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git" }
rtnetlink = "0.14.1"
vm-device = "0.1.0"
log = "0.4.27"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
iptables = "0.5.1"
macro_vmm = { path = "./macro_vmm" }
tokio-macros = "2.5.0"
