[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
actix-web = "4.9.0"
actix-multipart = "0.7.2"
tracing = "0.1.40"
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
scalar-doc = { version = "0.1.1", features = ["actix"] }
sealcid_traits = { path = "../sealcid/sealcid_traits" }
