[package]
name = "release-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env"] }
dotenv = "0.15.0"
prost = "0.13"
tokio = { version = "1.45.0", features = ["full"] }
tonic = "*"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "*"
