[package]
name = "scheduler"
version = "0.2.0"
edition = "2021"
default-run = "sealci_scheduler"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
prost = "0.12.0"
tonic-reflection = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.39", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "sealci_scheduler"
path = "src/main.rs"

[lib]
name = "sealci_scheduler"
path = "src/lib/lib.rs"
