[package]
name = "scheduler"
version = "0.2.0"
edition = "2024"
default-run = "sealci-scheduler"

[dependencies]
tonic = "0.13.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
prost = "0.13.5"
tonic-reflection = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.39", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.1"

[[bin]]
name = "sealci-scheduler"
path = "src/main.rs"

[lib]
name = "sealci_scheduler"
path = "src/lib/lib.rs"
