[workspace]
members = ["sealcid_traits"]


[package]
name = "sealcid"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "../agent" }
sealcid_traits = { path = "./sealcid_traits" }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"


[lib]
name = "sealcid"
path = "src/lib/lib.rs"
