[workspace]
members = ["sealcid_traits"]


[package]
name = "sealcid"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "../agent" }
clap = { version = "4.5.39", features = ["derive","env"] }
dirs = "6.0.0"
env = "1.0.1"
miette = { version = "7.6.0", features = ["fancy"] }
prost = "0.13.5"
controller = { path = "../controller" }
monitor = { path = "../monitor" }
sealci_scheduler = { path = "../scheduler" }
sealcid_traits = { path = "./sealcid_traits" }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
tracing = "0.1.41"


[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.13.1"

[lib]
name = "sealcid"
path = "src/lib/lib.rs"
